OCT-584 Implement improvements to Wallet sheet view

--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -143,7 +143,7 @@ $padding: 2.4rem;
 
 .titleSuffix {
   font-size: $font-size-12;
-  color: $color-octant-green2;
+  color: $color-octant-grey6;
 }
 
 .expandableChildren {
@@ -208,7 +208,7 @@ $padding: 2.4rem;
   }
 }
 
-.textAlign--{
+.textAlign-- {
   &center {
     text-align: center;
   }
