--- a/client/src/components/core/DoubleValue/DoubleValue.module.scss
+++ b/client/src/components/core/DoubleValue/DoubleValue.module.scss
@@ -40,7 +40,7 @@
 
 .secondary {
   font-size: $font-size-12;
-  color: $color-octant-green2;
+  color: $color-octant-grey6;
 
   &.isError {
     color: $color-octant-orange;
