--- a/client/src/components/dedicated/Wallet/Wallet.module.scss
+++ b/client/src/components/dedicated/Wallet/Wallet.module.scss
@@ -1,6 +1,6 @@
 .element {
   &:not(:last-child) {
-    margin: 0 auto 1.6rem;
+    margin: 0 auto 2.4rem;
   }
 }
 
@@ -29,4 +29,5 @@
 
 .button {
   width: 100%;
+  height: 4.8rem;
 }
