--- a/client/src/components/dedicated/WalletModal/WalletModal.module.scss
+++ b/client/src/components/dedicated/WalletModal/WalletModal.module.scss
@@ -1,32 +1,3 @@
-.element {
-  &:not(:last-child) {
-    margin: 0 auto 1.6rem;
-  }
-}
-
-.box {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.walletCurrency {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: $color-octant-dark;
-  font-size: $font-size-14;
-  height: 7.2rem;
-  width: 100%;
-
-  &:not(:last-child) {
-    border-bottom: 0.1rem solid $color-white;
-  }
-
-  &:last-child {
-    padding-bottom: 0;
-  }
-}
-
-.button {
-  width: 100%;
+.modalBody {
+  padding: 3.2rem 2.4rem 2.4rem;
 }
