OCT-590 Metamask app browser doesn't show Modal blur

--- a/client/src/styles/utils/_mixins.scss
+++ b/client/src/styles/utils/_mixins.scss
@@ -10,7 +10,8 @@
 
   // This class needs to be aligned with whatever triggers the overflow to open, e.g. Modal.tsx.
   &.isOpen {
-    backdrop-filter: blur(4px);
+    backdrop-filter: blur(0.4rem);
+    -webkit-backdrop-filter: blur(0.4rem);
   }
 }
 
