--- a/client/src/components/core/InputSelect/InputSelect.module.scss
+++ b/client/src/components/core/InputSelect/InputSelect.module.scss
@@ -3,17 +3,31 @@
 }
 
 .option {
+  position: relative;
   display: flex;
-  align-items: center;
   cursor: pointer;
   color: $color-octant-dark;
+  width: 100%;
+  height: 4.8rem;
+  justify-content: left;
+  align-items: center;
+  font-size: $font-size-18;
+  padding-left: 5.6rem;
 
-  &:not(:last-child) {
-    margin: 0 0 2rem 0;
+  @media #{$desktop-up} {
+    font-size: $font-size-12;
+    height: 3.2rem;
+    justify-content: center;
+    padding-left: 0;
   }
 
   .iconTick {
-    margin: 0 2rem 0 0;
+    position: absolute;
+    left: 2.5rem;
+  }
+
+  &:hover {
+    background: $color-octant-grey7;
   }
 }
 
@@ -21,25 +35,41 @@
   position: fixed;
   top: auto;
   bottom: 0;
-  left: 0;
+  right: 0;
   margin: 0;
-  padding: 3.2rem 2.3rem;
-  border-radius: $border-radius-20 $border-radius-20 0 0;
+  padding: 2.4rem 0rem;
+  border-radius: $border-radius-16;
   z-index: $z-index-5;
   box-shadow: $box-shadow-1;
   height: auto;
   width: 100%;
   animation: fadeIn 0.25s linear;
   background: $color-white;
+
+  @media #{$desktop-up} {
+    position: absolute;
+    top: -1.7rem;
+    right: -0.63rem;
+    bottom: auto;
+    width: 12.8rem;
+    padding: 1.6rem 0rem;
+    animation: none;
+  }
 }
 
 .overlay {
-  @include overlay(100%, 100%);
+  @media #{$tablet-down} {
+    @include overlay(100%, 100%);
+  }
 }
 
 .buttonClose {
   position: absolute;
-  top: 2.4rem;
-  right: 2.4rem;
+  top: 1.6rem;
+  right: 1.6rem;
   z-index: $z-index-4;
+
+  @media #{$desktop-up} {
+    display: none;
+  }
 }
