OCT-631 Fix Cypress in CI

--- a/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
+++ b/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
@@ -1,6 +1,6 @@
 .root {
   &:not(.isAllocatedTo) {
-    &:not(.isAddedToAllocate) {
+    &.isAddedToAllocate {
       svg path {
         stroke: $color-octant-orange;
         fill: $color-octant-orange;
