--- a/client/src/components/core/InputSelect/InputSelect.module.scss
+++ b/client/src/components/core/InputSelect/InputSelect.module.scss
@@ -37,7 +37,7 @@
   bottom: 0;
   right: 0;
   margin: 0;
-  padding: 2.4rem 0rem;
+  padding: 2.4rem 0;
   border-radius: $border-radius-16;
   z-index: $z-index-5;
   box-shadow: $box-shadow-1;
@@ -48,11 +48,11 @@
 
   @media #{$desktop-up} {
     position: absolute;
-    top: -1.7rem;
+    top: -2.2rem;
     right: -0.63rem;
     bottom: auto;
     width: 12.8rem;
-    padding: 1.6rem 0rem;
+    padding: 1.6rem 0;
     animation: none;
   }
 }
