--- a/client/src/components/dedicated/AllocationNavigation/AllocationNavigation.module.scss
+++ b/client/src/components/dedicated/AllocationNavigation/AllocationNavigation.module.scss
@@ -5,13 +5,22 @@
   .button {
     flex: 1;
     height: 4.8rem;
+    padding: 1rem;
 
     &:first-child {
-      margin-right: 0.8rem;
+      margin-right: 0.7rem;
+
+      @media #{$desktop-up} {
+        margin-right: 1.2rem;
+      }
     }
 
     &:last-child {
-      margin-left: 0.8rem;
+      margin-left: 0.7rem;
+
+      @media #{$desktop-up} {
+        margin-left: 1.2rem;
+      }
     }
   }
 }
