OCT-639 Implement skeleton loader for project tiles

--- a/client/src/styles/utils/_keyframes.scss
+++ b/client/src/styles/utils/_keyframes.scss
@@ -27,3 +27,12 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes wave {
+  0% {
+    background-position: -46.8rem 0;
+  }
+  100% {
+    background-position: 46.8rem 0;
+  }
+}
