--- a/client/src/styles/utils/_mixins.scss
+++ b/client/src/styles/utils/_mixins.scss
@@ -52,3 +52,23 @@
   z-index: $z-index-3;
   pointer-events: none;
 }
+
+@mixin skeleton() {
+  border-radius: 0.4rem;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(8%, $color-octant-grey12),
+    color-stop(18%, $color-octant-grey11),
+    color-stop(35%, $color-octant-grey12)
+  );
+  background: linear-gradient(
+    to right,
+    color-stop(8%, $color-octant-grey12),
+    color-stop(18%, $color-octant-grey11),
+    color-stop(35%, $color-octant-grey12)
+  );
+  background-size: 80rem 10rem;
+  animation: wave 2s infinite ease-out;
+}
