OCT-641 TipTiles: implement open & close animation

--- a/client/src/views/MetricsView/MetricsView.module.scss
+++ b/client/src/views/MetricsView/MetricsView.module.scss
@@ -21,7 +21,11 @@
 }
 
 .tip {
-  margin-bottom: 3.2rem;
+  margin-bottom: 1.6rem;
+
+  @media #{$desktop-up} {
+    margin-bottom: 2.8rem;
+  }
 }
 
 .blackText {
