--- a/client/src/components/dedicated/Navbar/Navbar.module.scss
+++ b/client/src/components/dedicated/Navbar/Navbar.module.scss
@@ -55,6 +55,14 @@
     flex: 0;
     font-size: $font-size-10;
 
+    &:not(.isActive):hover {
+      color: $color-octant-grey6;
+
+      svg path {
+        stroke: $color-octant-grey6;
+      }
+    }
+
     @media #{$desktop-up} {
       font-size: $font-size-12;
 
