--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -1,5 +1,4 @@
 $desktop-width: 47.2rem;
-$paddingVertical: 3.2rem;
 
 .root {
   display: flex;
@@ -46,6 +45,7 @@ $paddingVertical: 3.2rem;
     color: $color-octant-dark;
     width: 100%;
     overflow: hidden;
+    line-height: 8.8rem;
   }
 }
 
@@ -55,7 +55,7 @@ $paddingVertical: 3.2rem;
   justify-content: center;
   width: 100%;
   background: $color-white;
-  padding: $paddingVertical 2.4rem;
+  padding: 0 2.4rem 2.4rem;
   overflow: auto;
 }
 
@@ -92,7 +92,7 @@ $paddingVertical: 3.2rem;
   }
 
   .body {
-    padding: $paddingVertical 5.6rem;
+    padding: 0 5.6rem 5.6rem;
 
     &.hasImage {
       border-radius: 0 0 $border-radius-20 $border-radius-20;
