--- a/client/src/components/dedicated/TipTile/TipTile.module.scss
+++ b/client/src/components/dedicated/TipTile/TipTile.module.scss
@@ -17,6 +17,11 @@
   font-weight: $font-weight-bold;
   font-size: $font-size-14;
   margin-left: 0.8rem;
+  line-height: 3.2rem;
+
+  @media #{$desktop-up} {
+    font-size: $font-size-16;
+  }
 }
 
 .image {
@@ -27,21 +32,32 @@
 .info {
   display: flex;
   align-items: center;
-  padding: 2.4rem 0 0 2rem;
+  padding: 2.4rem 0 0rem 2rem;
+
+  @media #{$desktop-up} {
+    padding: 2rem 0 0 2rem;
+  }
 }
 
 .body {
   text-align: left;
-  padding: 1.6rem 0 1.6rem 2.4rem;
+  padding: 2.5rem 0 0.8rem 2.4rem;
+
+  @media #{$desktop-up} {
+    padding: 3rem 0 4.8rem 2.4rem;
+    font-size: $font-size-20;
+  }
 }
 
 .title {
   color: $color-octant-dark;
   font-weight: $font-weight-bold;
   font-size: $font-size-18;
-  margin-bottom: 0.8rem;
-  padding: 0.5rem 0;
-  line-height: 2.2rem;
+  line-height: 3.2rem;
+
+  @media #{$desktop-up} {
+    font-size: $font-size-20;
+  }
 }
 
 .imageWrapper {
@@ -55,7 +71,7 @@
   @media #{$desktop-up} {
     flex: 1;
     width: 28rem;
-    padding: 1.6rem 0;
+    padding: 1.6rem 2rem 1.6rem 0;
   }
 }
 
@@ -64,12 +80,16 @@
   font-size: $font-size-12;
   font-weight: $font-weight-semibold;
   line-height: 2.2rem;
-  padding-bottom: 1.2rem;
   width: 19rem;
+  height: 7.7rem;
+  margin-top: 0.2rem;
 
   @media #{$desktop-up} {
+    margin-top: 0.6rem;
     flex: 1;
-    width: 28rem;
+    width: 33.6rem;
+    font-size: $font-size-14;
+    height: 5.6rem;
   }
 }
 
