OCT-652 Implement feature: allow separate intro text for Project tiles

--- a/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
+++ b/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
@@ -55,7 +55,7 @@ $proposalItemPadding: 2.4rem;
     align-items: center;
   }
 
-  .description {
+  .introDescription {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
