OCT-687 Adjust client to project threshold in WEI, not percentage

--- a/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
@@ -46,7 +46,7 @@
       background: $color-octant-orange;
       margin-right: 1.4rem;
 
-      &.isProjectFounded {
+      &.isDonationAboveThreshold {
         background: $color-octant-green;
       }
     }
