--- a/client/src/views/MetricsView/MetricsView.module.scss
+++ b/client/src/views/MetricsView/MetricsView.module.scss
@@ -1,18 +1,17 @@
-.element {
-  width: 100%;
-
-  &:not(:last-child) {
-    margin: 0 auto 4.8rem;
-  }
-}
-
 .box {
+  height: 14.4rem;
+
   &:not(:last-child) {
     margin: 0 auto 1.6rem;
   }
 
   @media #{$desktop-up} {
     @include flexBasisGutter(2, 1.6rem);
+
+    &.ethStaked,
+    &.glmLocked {
+      height: 12rem;
+    }
   }
 }
 
@@ -33,12 +32,36 @@
 }
 
 .boxesGroup {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
   @media #{$desktop-up} {
-    display: flex;
-    align-items: start;
+    align-items: stretch;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .box {
-    margin: 0 auto 1.6rem;
+    margin: 0 0 1.6rem;
+  }
+
+  .order1 {
+    order: 1;
+  }
+
+  .order2 {
+    order: 2;
+  }
+
+  .totalSupply {
+    &.isEpoch1 {
+      order: 3;
+    }
+
+    @media #{$tablet-down} {
+      order: 3;
+    }
   }
 }
