--- a/client/src/components/dedicated/TipTile/TipTile.module.scss
+++ b/client/src/components/dedicated/TipTile/TipTile.module.scss
@@ -32,7 +32,7 @@
 .info {
   display: flex;
   align-items: center;
-  padding: 2.4rem 0 0rem 2rem;
+  padding: 2.4rem 0 0 2rem;
 
   @media #{$desktop-up} {
     padding: 2rem 0 0 2rem;
