OCT-751 Lock flow labels should be disabled when input fields are

--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -130,6 +130,10 @@
       color: $color-octant-dark;
       background: $color-octant-grey2;
       border-radius: $border-radius-04;
+
+      &.isDisabled {
+        color: $color-octant-grey6;
+      }
     }
   }
 }
