OCT-754 Improvements to Allocate tiles display for Epoch 1

--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -17,6 +17,7 @@ $color-octant-grey12: #f3f3f3;
 $color-octant-grey13: #9c9c9c;
 $color-octant-grey14: #d7d7d7;
 $color-octant-grey15: #bababa;
+$color-octant-grey16: #cdd1cd;
 $color-octant-green: #2d9b87;
 $color-octant-green2: #5b8a81;
 $color-octant-green3: #1d4558;
