--- a/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
@@ -67,6 +67,10 @@ $rowHeightMobile: 5.6rem;
   font-size: $font-size-12;
   font-weight: $font-weight-semibold;
 
+  &.isEpoch1 {
+    color: $color-octant-grey16;
+  }
+
   .dot {
     width: 1rem;
     height: 1rem;
@@ -76,6 +80,10 @@ $rowHeightMobile: 5.6rem;
 
     &.isDonationAboveThreshold {
       background: $color-octant-green;
+    }
+
+    &.isEpoch1 {
+      background: $color-octant-grey16;
     }
   }
 }
@@ -87,6 +95,10 @@ $rowHeightMobile: 5.6rem;
   justify-content: center;
   height: 100%;
   width: 12rem;
+
+  &.isEpoch1 {
+    opacity: 0.5;
+  }
 
   .allocatedPercentage {
     color: $color-octant-green;
