--- a/client/src/components/dedicated/ModalOnboarding/ModalOnboarding.module.scss
+++ b/client/src/components/dedicated/ModalOnboarding/ModalOnboarding.module.scss
@@ -12,6 +12,10 @@
   padding: 0 2.4rem;
   overflow: hidden;
 
+  @media #{$desktop-up} {
+    padding: 0 4.8rem;
+  }
+
   .onboardingModalHeader {
     display: flex;
     align-items: center;
@@ -62,4 +66,17 @@
     max-width: 100%;
     max-height: 100%;
   }
+}
+
+.loaderWrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonClaimGlm {
+  width: 100%;
+  margin-top: 4.8rem;
 }
