OCT-753 Add circular masks to project avatars shown on Allocate tiles

--- a/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
@@ -44,6 +44,7 @@ $rowHeightMobile: 5.6rem;
     display: none;
     width: 3.2rem;
     height: 3.2rem;
+    border-radius: 50%;
     margin: 0 1.6rem 0 0;
 
     @media #{$desktop-up} {
