OCT-768 Fix glitch with Earn History section jumping on withdraw sheet close (mobile only)

--- a/client/src/views/MetricsView/MetricsView.module.scss
+++ b/client/src/views/MetricsView/MetricsView.module.scss
@@ -1,8 +1,8 @@
 .box {
   height: 14.4rem;
 
-  &:not(:last-child) {
-    margin: 0 auto 1.6rem;
+  &:not(:first-child) {
+    margin: 1.6rem auto 0;
   }
 
   @media #{$desktop-up} {
