--- a/client/src/views/SettingsView/SettingsView.module.scss
+++ b/client/src/views/SettingsView/SettingsView.module.scss
@@ -2,8 +2,8 @@
   height: 6.4rem;
   font-size: $font-size-12;
 
-  &:not(:last-child) {
-    margin: 0 auto 1.6rem;
+  &:not(:first-child) {
+    margin: 1.6rem auto 0;
   }
 
   &.isDisabled {
