--- a/client/src/components/dedicated/History/HistoryItem/HistoryItem.module.scss
+++ b/client/src/components/dedicated/History/HistoryItem/HistoryItem.module.scss
@@ -1,8 +1,8 @@
 .box {
   padding: 1.6rem;
 
-  &:not(:last-child) {
-    margin: 0 auto 1.6rem;
+  &:not(:first-child) {
+    margin: 1.6rem auto 0 auto;
   }
 }
 
