--- a/client/src/views/AllocationView/AllocationView.module.scss
+++ b/client/src/views/AllocationView/AllocationView.module.scss
@@ -7,8 +7,8 @@
     padding: 0;
   }
 
-  &:not(:last-child) {
-    margin: 0 auto 1.6rem;
+  &:not(:first-child) {
+    margin: 1.6rem auto 0;
   }
 
   &.isTipTiles {
