[HOTFIX]: GLM lock modal tabs switching

--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -62,6 +62,10 @@ $padding: 2.2rem;
     cursor: pointer;
   }
 
+  &.isDisabled {
+    cursor: default;
+  }
+
   &.isActive {
     color: $color-octant-green2;
   }
