OCT-729 Project view: remove grey background on mobile

--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -1,3 +1,11 @@
+.mainLayoutBody {
+  @media #{$tablet-down} {
+    padding-left: 0;
+    padding-right: 0;
+    background: $color-white;
+  }
+}
+
 .divider {
   background: $color-octant-grey2;
   height: 0.1rem;
