--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -14,6 +14,7 @@ $transition-time-1: 0.5s;
 $transition-time-2: 0.25s;
 $transition-time-3: 0.2s;
 $transition-time-4: 0.1s;
+$transition-time-5: 0.15s;
 
 $z-index-2: 2;
 $z-index-3: 3;
