--- a/client/src/components/dedicated/DonorsList/DonorsList.module.scss
+++ b/client/src/components/dedicated/DonorsList/DonorsList.module.scss
@@ -1,10 +1,21 @@
 .root {
+  position: relative;
   display: flex;
   flex-direction: column;
   background: $color-octant-grey7;
-  padding: 4rem 0;
+  padding: 3.4rem 0 10.4rem;
   flex: 1;
   align-self: stretch;
+
+  @media #{$desktop-up} {
+    padding: 2.6rem 0 10.4rem;
+  }
+
+  .donorsItem {
+    &:not(:first-child) {
+      margin-top: 1.2rem;
+    }
+  }
 
   .donationsNotEnabled {
     font-size: $font-size-14;
@@ -12,8 +23,11 @@
     color: $color-octant-grey6;
   }
 
-  .loader {
-    align-self: center;
+  .divider {
+    width: 100%;
+    height: 0.1rem;
+    background: $color-octant-grey12;
+    margin-top: 2.4rem;
   }
 
   .header {
@@ -24,51 +38,36 @@
     font-size: $font-size-16;
     font-weight: $font-weight-bold;
     margin-bottom: 2.4rem;
-    padding-bottom: 1.6rem;
+    padding-bottom: 1.4rem;
     border-bottom: 0.1rem solid $color-octant-grey2;
+
+    @media #{$desktop-up} {
+      font-size: $font-size-18;
+    }
+
+    .headerLabel {
+      line-height: 3.2rem;
+    }
 
     .count {
       display: flex;
       align-items: center;
+      justify-content: center;
       height: 2.4rem;
+      min-width: 3.2rem;
       font-size: $font-size-12;
-      color: $color-white;
-      background: $color-octant-grey6;
+      color: $color-octant-dark;
+      background: $color-octant-grey2;
       border-radius: $border-radius-10;
-      margin: 0 0 0 1rem;
-      padding: 0 1rem;
     }
-  }
-
-  .donor {
-    display: flex;
-    align-items: center;
-    font-size: $font-size-14;
-    font-weight: $font-weight-semibold;
-    color: $color-octant-grey6;
-
-    &:not(:last-child) {
-      margin-bottom: 0.8rem;
-    }
-
-    .address {
-      flex: 1;
-      text-align: left;
-    }
-  }
-
-  .identicon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 2.4rem;
-    height: 2.4rem;
-    border-radius: $border-radius-10;
-    background: $color-white;
-    margin-right: 1.5rem;
   }
 }
 
 .buttonDonors {
+  position: absolute;
   align-self: center;
+  bottom: 3.2rem;
+  font-size: $font-size-12;
+  width: 11.2rem;
+  height: 4rem;
 }
