--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -42,6 +42,11 @@
 .donors {
   padding-left: 5.6rem;
   padding-right: 5.6rem;
+
+  @media #{$desktop-up} {
+    padding-left: 11rem;
+    padding-right: 11rem;
+  }
 }
 
 .proposalHeader {
