--- a/client/src/components/dedicated/Wallet/Wallet.module.scss
+++ b/client/src/components/dedicated/Wallet/Wallet.module.scss
@@ -9,6 +9,12 @@
   padding-bottom: 0;
 }
 
+.titleSuffix {
+  @include ethereumAddress();
+  font-size: $font-size-12;
+  color: $color-octant-grey6;
+}
+
 .walletCurrency {
   display: flex;
   align-items: center;
