--- a/client/src/layouts/MainLayout/MainLayout.module.scss
+++ b/client/src/layouts/MainLayout/MainLayout.module.scss
@@ -125,6 +125,7 @@ $bodyPaddingTopDesktop: calc(2.4rem + $headerMarginTop + $headerHeight);
 }
 
 .address {
+  @include ethereumAddress();
   font-weight: $font-weight-bold;
 }
 
