OCT-825 Implement standard Octant tooltip style && OCT-826 Update Effective Balance tooltip content

--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -126,8 +126,7 @@
 .actionsWrapper {
   display: flex;
 
-  .shareWrapper {
-    position: relative;
+  .tooltip {
     margin-right: 3.2rem;
 
     @media #{$desktop-up} {
