--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -18,6 +18,7 @@ $color-octant-grey13: #9c9c9c;
 $color-octant-grey14: #d7d7d7;
 $color-octant-grey15: #bababa;
 $color-octant-grey16: #cdd1cd;
+$color-octant-grey17: #323232;
 $color-octant-green: #2d9b87;
 $color-octant-green2: #5b8a81;
 $color-octant-green3: #1d4558;
